tests/misc_tests/type_ne_ui_tests/type_ne_macro-err.rs
const _: () = {
    let _ = typewit::type_ne!{u8, u8};
    let _ = typewit::type_ne!{<T> T, T};
};

fn main() {}